After complect refwork booking page

--- a/movieproject/templates/index.html
+++ b/movieproject/templates/index.html
@@ -1,1 +1,23 @@
-<h2>hello</h2>
+{% extends 'layouts.html' %}
+{% block titleblock %}Book My Ticket {% endblock %}
+{% block bodyblock %}
+
+
+ 
+  <div class="container-card">
+    {% for movie_one in movie_list %}
+  <div class="col-loop">
+   <div class="card" style="width:18rem;">
+    <img class="card-img-top" src="{{movie_one.img}}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">{{movie_one.name}}</h5>
+      <p class="card-text">{{movie_one.summary}}</p>
+      <p class="card-text">{{movie_one.rating}}</p>
+      <a href="{% url 'seatselection' %}" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  </div>
+
+  {% endfor %}
+</div>
+{% endblock %}
