--- a/movieproject/templates/index.html
+++ b/movieproject/templates/index.html
@@ -13,7 +13,7 @@
       <h5 class="card-title">{{movie_one.name}}</h5>
       <p class="card-text">{{movie_one.summary}}</p>
       <p class="card-text">{{movie_one.rating}}</p>
-      <a href="{% url 'seatselection' %}" class="btn btn-primary">Go somewhere</a>
+      <a href="{% url 'seatselection' %}" class="btn btn-primary">Book Now</a>
     </div>
   </div>
   </div>
