--- a/movieproject/templates/layouts.html
+++ b/movieproject/templates/layouts.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="{% static 'css/layouts.css' %}">
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="stylesheet" href="{% static 'css/seatselection.css' %}">
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
+    <link rel="stylesheet" href="{% static 'css/checkout.css' %}">
     <link rel="icon" href="https://p7.hiclipart.com/preview/936/587/822/youtube-video-editing-film-youtube.jpg" type="image/x-icon">
     <title> {% block titleblock %} {% endblock %}</title>
 </head>
@@ -50,7 +52,7 @@
                                 </div>
                               </li>
                            
-                        <li class="nav-items"><a class="nav-link" href="">LOGIN/REGISTER</a></li>
+                        <li class="nav-items"><a class="nav-link" href="{%url 'register'%}">LOGIN/REGISTER</a></li>
                         <input class="txtfield " type="text" placeholder="SEARCH MOVIE ">
                         <button class="btn btn-primary"> Search</button>
 
