--- a/movieproject/templates/seatselection.html
+++ b/movieproject/templates/seatselection.html
@@ -238,7 +238,7 @@
   <div class="row-selection-reviews">
     <div class="calculation">
       <div class="amount"></div>
-      <div class="book-btn"><button class="btn btn-warning">Book Now</button></div>
+      <div class="book-btn"><a style="text-decoration: none;" href="{% url 'checkout' %}"><button class="btn btn-warning">Book Now</button></a></div>
     </div>
     <div class="casting">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
