--- a/movieproject/static/css/seatselection.css
+++ b/movieproject/static/css/seatselection.css
@@ -22,6 +22,7 @@
 
 .col-poster img{
     width: 20em;
+    height: 28em;
     border-radius: 2em;
 }
 .col-poster img:hover{
@@ -198,15 +199,34 @@
     height: 300px;
 }
 .casting{
+    width: 100%;
     justify-content: center;
-    background-color: black;
-    
-}
-.carousel-item{
     display: flex;
-    align-items: center;
+    justify-content: space-between;
 }
-.d-block{
-    width: 255px;
-    height: 220px;
+.actors{
+    border: 1px solid rgb(76, 76, 78);
+    width: 10em;
+    border-radius: 50%;
+    height: 10em;
+
+}
+.names{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 1em;
+    padding-left: 4em;
+}
+.names:nth-child(3){
+    margin-right: 1em;
+}
+.names:nth-child(4){
+    margin-right: 3em;
+}
+.casting img{
+    
+    width: 10em;
+    border-radius: 50%;
+    height: 10em;
+
 }
