--- a/movieproject/templates/seatselection.html
+++ b/movieproject/templates/seatselection.html
@@ -1,39 +1,45 @@
 {% extends 'layouts.html' %}
+{% load static %}
+{% block headblock %} <link rel="stylesheet" href="{% static 'css/seatselection.css' %}"> {% endblock %}
 {% block titleblock %}Movie Selection {% endblock %}
 
 {% block bodyblock %}
-<div class="container-selection-main">
 
+<div class="container-selection-main">
+ 
   <div class="row-selection-banner">
     <div class="col-poster">
-      <img src="https://www.mixindia.com/wp-content/uploads/2020/01/Ajayante-Randam-Moshanam-Poster.jpg" alt="">
+      {% for movie_detail in Movie_Names %}
+      <img style="height: 28em;" src="{{movie_detail.poster.url}}" alt="">
       <i class="bi bi-play-circle"></i>
        <a href=""><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
         <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/>
       </svg>
       </a>
+     
     </div> 
     <div class="col-poster-detail">
-        <img src="https://images.ottplay.com/images/Ajayante_Randam_Moshanam_2020_movie_photo_1.jpg?impolicy=ottplay-20210210&width=1200&height=675" alt="">
+        <img src="{{movie_detail.banner.url}}" alt="">
        <div class="sub-details">
-        <div class="title"> <h2>Ajayante Randam Moshanam </h2></div>
+        <div class="title"> <h2>{{movie_detail.movieName}} </h2></div>
         <div class="rating">
           <i class="bi bi-star-fill"></i>
           <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="yellow" class="bi bi-star-fill" viewBox="0 0 16 16">
             <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-          </svg><p>.../10</p>
+          </svg><p>{{movie_detail.rating}}/10</p>
         </div>
         <div class="movie-type">
-          <button class="btn btn-primary">2D</button>
-          <button class="btn btn-primary">Malayalam</button>
+          <button class="btn btn-primary">{{movie_detail.movieFromat}}</button>
+          <button class="btn btn-primary">{{movie_detail.language}}</button>
         </div>
         <div class="movie-duration">
-          <p>2h 34m <div class="vertical-line"></div>Action<div class="vertical-line"></div>Adventure<div class="vertical-line"></div>Thriller
-            <div class="vertical-line"></div>UA<div class="vertical-line"></div>Comming Soon</p>
+          <p>2h 34m <div class="vertical-line"></div>{{movie_detail.joner1}}<div class="vertical-line"></div>{{movie_detail.joner2}}<div class="vertical-line"></div>{{movie_detail.joner3}}
+            <div class="vertical-line"></div>{{movie_detail.censor}}<div class="vertical-line"></div>{{movie_detail.releasingDate}}</p>
         </div>
        </div>
       </div>
+      
   </div>
   
 <!-------------------------------------------------seats------------------------------------------------------------------------------->
@@ -241,51 +247,19 @@
       <div class="book-btn"><a style="text-decoration: none;" href="{% url 'checkout' %}"><button class="btn btn-warning">Book Now</button></a></div>
     </div>
     <div class="casting">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block" src="https://i.ytimg.com/vi/1_0qYYZaqrs/maxresdefault.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block" src="https://m.media-amazon.com/images/M/MV5BYThiMzQ2MmItYTQ5ZC00N2VjLThmNWMtNzE2NjAxYmQ1MDVlXkEyXkFqcGdeQXVyMTU0ODI1NTA2._V1_FMjpg_UX1000_.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block" src="https://i.ytimg.com/vi/uOmgN6AXHPY/maxresdefault.jpg" alt="First slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only"></span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only"></span>
-      </a>
+      <div class = "actors"><img src="" alt=""></div>
+      <div class = "actors"><img src="" alt=""></div>
+      <div class = "actors"><img src="" alt=""></div>
+      <div class = "actors"><img src="" alt=""></div>
+    </div>
+    <div class="casting">
+      <div class="names"><p>hello</p></div>
+      <div class="names"><p>hello</p></div>
+      <div class="names"><p>hello</p></div>
+      <div class="names"><p>hello</p></div>
     </div>
   </div>
-  </div>
-
+  {% endfor %}
 </div>
-<script>
-  var buttonclicked = false;
-    function changeButtonColor() {
-    var button = document.getElementById("chair");
-    
-    if (!buttonclicked)
-    {
 
-      button.style.backgroundColor = "red";
-      var buttonValue = button.value;
-      var buttonclicked = !buttonclicked;
-    }
-    else
-    {
-      button.style.backgroundColor = "";
-      console.log("hello")
-    }
-    console.log("Button Value:", buttonValue);
-  }
-
-
-</script>
 {% endblock %}
