--- a/movieproject/static/css/index.css
+++ b/movieproject/static/css/index.css
@@ -9,7 +9,10 @@
     gap: 6em;
 }
 /*===========================================index page====================================================*/
-
+.btn-index{
+    margin-left:9em; 
+    display: block;
+}
 
 
 
