--- a/movieproject/templates/seatselection.html
+++ b/movieproject/templates/seatselection.html
@@ -9,8 +9,8 @@
  
   <div class="row-selection-banner">
     <div class="col-poster">
-      {% for movie_detail in Movie_Names %}
-      <img style="height: 28em;" src="{{movie_detail.poster.url}}" alt="">
+      
+      <img style="height: 28em;" src="{{Movie_Names.poster.url}}" alt="">
       <i class="bi bi-play-circle"></i>
        <a href=""><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -20,22 +20,22 @@
      
     </div> 
     <div class="col-poster-detail">
-        <img src="{{movie_detail.banner.url}}" alt="">
+        <img src="{{Movie_Names.banner.url}}" alt="">
        <div class="sub-details">
-        <div class="title"> <h2>{{movie_detail.movieName}} </h2></div>
+        <div class="title"> <h2>{{Movie_Names.movieName}} </h2></div>
         <div class="rating">
           <i class="bi bi-star-fill"></i>
           <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="yellow" class="bi bi-star-fill" viewBox="0 0 16 16">
             <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-          </svg><p>{{movie_detail.rating}}/10</p>
+          </svg><p>{{Movie_Names.rating}}/10</p>
         </div>
         <div class="movie-type">
-          <button class="btn btn-primary">{{movie_detail.movieFromat}}</button>
-          <button class="btn btn-primary">{{movie_detail.language}}</button>
+          <button class="btn btn-primary">{{Movie_Names.movieFromat}}</button>
+          <button class="btn btn-primary">{{Movie_Names.language}}</button>
         </div>
         <div class="movie-duration">
-          <p>2h 34m <div class="vertical-line"></div>{{movie_detail.joner1}}<div class="vertical-line"></div>{{movie_detail.joner2}}<div class="vertical-line"></div>{{movie_detail.joner3}}
-            <div class="vertical-line"></div>{{movie_detail.censor}}<div class="vertical-line"></div>{{movie_detail.releasingDate}}</p>
+          <p>{{Movie_Names.duration}}<div class="vertical-line"></div>{{Movie_Names.joner1}}<div class="vertical-line"></div>{{Movie_Names.joner2}}<div class="vertical-line"></div>{{Movie_Names.joner3}}
+            <div class="vertical-line"></div>{{Movie_Names.censor}}<div class="vertical-line"></div>{{Movie_Names.releasingDate}}</p>
         </div>
        </div>
       </div>
@@ -259,7 +259,6 @@
       <div class="names"><p>hello</p></div>
     </div>
   </div>
-  {% endfor %}
 </div>
 
 {% endblock %}
