--- a/movieproject/templates/checkout.html
+++ b/movieproject/templates/checkout.html
@@ -36,8 +36,8 @@
         <div class="title-order"> O R D E R  S U M M A R Y </div>
         <div class="detail-tkt">
         <div class="tkt-summary">
-            <p>Movie Name</p>
-            <p>language</p>
+            <p>{{Check_out.movieName}}</p>
+            <p>{{Check_out.language}}</p>
             <p>name</p>
             <p>time and date</p>
         </div>
