--- a/movieproject/templates/seatselection.html
+++ b/movieproject/templates/seatselection.html
@@ -244,7 +244,7 @@
   <div class="row-selection-reviews">
     <div class="calculation">
       <div class="amount"></div>
-      <div class="book-btn"><a style="text-decoration: none;" href="{% url 'checkout' %}"><button class="btn btn-warning">Book Now</button></a></div>
+      <div class="book-btn"><a style="text-decoration: none;" href="{% url 'checkout' Movie_Names.id %}"><button class="btn btn-warning">Book Now</button></a></div>
     </div>
     <div class="casting">
       <div class = "actors"><img src="" alt=""></div>
