--- a/movieproject/templates/seatselection.html
+++ b/movieproject/templates/seatselection.html
@@ -86,152 +86,152 @@
     <div class="seats">
       <div class="row-seat">
         <span>A</span>
-        <li><button id="chair" class="chair" onclick="changeButtonColor()" value="2">1</button></li>
-        <li class="chair" onclick="getSeat()" value="2"></li>
-        <li class="chair" onclick="getSeat()" value="3"></li>
-        <li class="chair" onclick="getSeat()" value="4"></li>
-        <li class="chair" onclick="getSeat()" value="5"></li>
-        <li class="chair" onclick="getSeat()" value="6"></li>
-        <li class="chair" onclick="getSeat()" value="7"></li>
-        <li class="chair" onclick="getSeat()" value="8"></li>
-        <li class="chair" onclick="getSeat()" value="9"></li>
-        <li class="chair" onclick="getSeat()" value="10"></li>
-        <li class="chair" onclick="getSeat()" value="11"></li>
-        <li class="chair" onclick="getSeat()" value="12"></li>
-        <li class="chair" onclick="getSeat()" value="13"></li>
-        <li class="chair" onclick="getSeat()" value="14"></li>
-        <li class="chair" onclick="getSeat()" value="15"></li>
-        <li class="chair" onclick="getSeat()" value="16"></li>
-        <li class="chair" onclick="getSeat()" value="17"></li>
-        <li class="chair" onclick="getSeat()" value="18"></li>
-        <li class="chair" onclick="getSeat()" value="19"></li>
-        <li class="chair" onclick="getSeat()" value="20"></li>
-        <li class="chair" onclick="getSeat()" value="21"></li>
+        <li class="chair" id="1"></li>
+        <li class="chair" id="2"></li>
+        <li class="chair" id="2" ></li>
+        <li class="chair" id="4" ></li>
+        <li class="chair" id="5" ></li>
+        <li class="chair" id="6" ></li>
+        <li class="chair" id="7" ></li>
+        <li class="chair" id="8" ></li>
+        <li class="chair" id="9" ></li>
+        <li class="chair" id="10"></li>
+        <li class="chair" id="11"></li>
+        <li class="chair" id="12"></li>
+        <li class="chair" id="13"></li>
+        <li class="chair" id="14"></li>
+        <li class="chair" id="15"></li>
+        <li class="chair" id="16"></li>
+        <li class="chair" id="17"></li>
+        <li class="chair" id="18"></li>
+        <li class="chair" id="19"></li>
+        <li class="chair" id="20"></li>
+        <li class="chair" id="21"></li>
         <span>A</span>
       </div>
       <div class="row-seat">
         <span>B</span>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
+        <li class="chair" id="1"></li>
+        <li class="chair" id="2"></li>
+        <li class="chair" id="2" ></li>
+        <li class="chair" id="4" ></li>
+        <li class="chair" id="5" ></li>
+        <li class="chair" id="6" ></li>
+        <li class="chair" id="7" ></li>
+        <li class="chair" id="8" ></li>
+        <li class="chair" id="9" ></li>
+        <li class="chair" id="10"></li>
+        <li class="chair" id="11"></li>
+        <li class="chair" id="12"></li>
+        <li class="chair" id="13"></li>
+        <li class="chair" id="14"></li>
+        <li class="chair" id="15"></li>
+        <li class="chair" id="16"></li>
+        <li class="chair" id="17"></li>
+        <li class="chair" id="18"></li>
+        <li class="chair" id="19"></li>
+        <li class="chair" id="20"></li>
+        <li class="chair" id="21"></li>
         <span>B</span>
       </div>
       <div class="row-seat">
         <span>C</span>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
+        <li class="chair" id="1"></li>
+        <li class="chair" id="2"></li>
+        <li class="chair" id="2" ></li>
+        <li class="chair" id="4" ></li>
+        <li class="chair" id="5" ></li>
+        <li class="chair" id="6" ></li>
+        <li class="chair" id="7" ></li>
+        <li class="chair" id="8" ></li>
+        <li class="chair" id="9" ></li>
+        <li class="chair" id="10"></li>
+        <li class="chair" id="11"></li>
+        <li class="chair" id="12"></li>
+        <li class="chair" id="13"></li>
+        <li class="chair" id="14"></li>
+        <li class="chair" id="15"></li>
+        <li class="chair" id="16"></li>
+        <li class="chair" id="17"></li>
+        <li class="chair" id="18"></li>
+        <li class="chair" id="19"></li>
+        <li class="chair" id="20"></li>
+        <li class="chair" id="21"></li>
         <span>C</span>
       </div>
       <div class="row-seat">
         <span>D</span>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
+        <li class="chair" id="1"></li>
+        <li class="chair" id="2"></li>
+        <li class="chair" id="2" ></li>
+        <li class="chair" id="4" ></li>
+        <li class="chair" id="5" ></li>
+        <li class="chair" id="6" ></li>
+        <li class="chair" id="7" ></li>
+        <li class="chair" id="8" ></li>
+        <li class="chair" id="9" ></li>
+        <li class="chair" id="10"></li>
+        <li class="chair" id="11"></li>
+        <li class="chair" id="12"></li>
+        <li class="chair" id="13"></li>
+        <li class="chair" id="14"></li>
+        <li class="chair" id="15"></li>
+        <li class="chair" id="16"></li>
+        <li class="chair" id="17"></li>
+        <li class="chair" id="18"></li>
+        <li class="chair" id="19"></li>
+        <li class="chair" id="20"></li>
+        <li class="chair" id="21"></li>
         <span>D</span>
       </div>
       <div class="row-seat">
         <span>E</span>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
+        <li class="chair" id="1"></li>
+        <li class="chair" id="2"></li>
+        <li class="chair" id="2" ></li>
+        <li class="chair" id="4" ></li>
+        <li class="chair" id="5" ></li>
+        <li class="chair" id="6" ></li>
+        <li class="chair" id="7" ></li>
+        <li class="chair" id="8" ></li>
+        <li class="chair" id="9" ></li>
+        <li class="chair" id="10"></li>
+        <li class="chair" id="11"></li>
+        <li class="chair" id="12"></li>
+        <li class="chair" id="13"></li>
+        <li class="chair" id="14"></li>
+        <li class="chair" id="15"></li>
+        <li class="chair" id="16"></li>
+        <li class="chair" id="17"></li>
+        <li class="chair" id="18"></li>
+        <li class="chair" id="19"></li>
+        <li class="chair" id="20"></li>
+        <li class="chair" id="21"></li>
         <span>E</span>
       </div>
       <div class="row-seat">
         <span>F</span>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
-        <li class="chair"></li>
+        <li class="chair" id="1"></li>
+        <li class="chair" id="2"></li>
+        <li class="chair" id="2" ></li>
+        <li class="chair" id="4" ></li>
+        <li class="chair" id="5" ></li>
+        <li class="chair" id="6" ></li>
+        <li class="chair" id="7" ></li>
+        <li class="chair" id="8" ></li>
+        <li class="chair" id="9" ></li>
+        <li class="chair" id="10"></li>
+        <li class="chair" id="11"></li>
+        <li class="chair" id="12"></li>
+        <li class="chair" id="13"></li>
+        <li class="chair" id="14"></li>
+        <li class="chair" id="15"></li>
+        <li class="chair" id="16"></li>
+        <li class="chair" id="17"></li>
+        <li class="chair" id="18"></li>
+        <li class="chair" id="19"></li>
+        <li class="chair" id="20"></li>
+        <li class="chair" id="21"></li>
         <span>F</span>
       </div>
     </div>
@@ -244,21 +244,21 @@
   <div class="row-selection-reviews">
     <div class="calculation">
       <div class="amount"></div>
-      <div class="book-btn"><a style="text-decoration: none;" href="{% url 'checkout' Movie_Names.id %}"><button class="btn btn-warning">Book Now</button></a></div>
+      <div class="book-btn"><a style="text-decoration: none;" href="{% url 'checkout' Movie_Names.id %}"><button class="btn btn-warning" id="amount">Book Now</button></a></div>
     </div>
     <div class="casting">
-      <div class = "actors"><img src="" alt=""></div>
-      <div class = "actors"><img src="" alt=""></div>
-      <div class = "actors"><img src="" alt=""></div>
-      <div class = "actors"><img src="" alt=""></div>
+      <div class = "actors"><img src="{{Movie_Names.actor_img1.url}}" alt=""></div>
+      <div class = "actors"><img src="{{Movie_Names.actor_img2.url}}" alt=""></div>
+      <div class = "actors"><img src="{{Movie_Names.actor_img3.url}}" alt=""></div>
+      <div class = "actors"><img src="{{Movie_Names.actor_img4.url}}" alt=""></div>
     </div>
     <div class="casting">
-      <div class="names"><p>hello</p></div>
-      <div class="names"><p>hello</p></div>
-      <div class="names"><p>hello</p></div>
-      <div class="names"><p>hello</p></div>
+      <div class="names"><p>{{Movie_Names.actor_Name1}}</p></div>
+      <div class="names"><p>{{Movie_Names.actor_Name2}}</p></div>
+      <div class="names"><p>{{Movie_Names.actor_Name3}}</p></div>
+      <div class="names"><p>{{Movie_Names.actor_Name4}}</p></div>
     </div>
   </div>
 </div>
-
+<script src="{% static 'JS/seatselection.js' %}"></script>
 {% endblock %}
