--- a/movieproject/templates/seatselection.html
+++ b/movieproject/templates/seatselection.html
@@ -86,152 +86,152 @@
     <div class="seats">
       <div class="row-seat">
         <span>A</span>
-        <li class="chair" id="1"></li>
-        <li class="chair" id="2"></li>
-        <li class="chair" id="2" ></li>
-        <li class="chair" id="4" ></li>
-        <li class="chair" id="5" ></li>
-        <li class="chair" id="6" ></li>
-        <li class="chair" id="7" ></li>
-        <li class="chair" id="8" ></li>
-        <li class="chair" id="9" ></li>
-        <li class="chair" id="10"></li>
-        <li class="chair" id="11"></li>
-        <li class="chair" id="12"></li>
-        <li class="chair" id="13"></li>
-        <li class="chair" id="14"></li>
-        <li class="chair" id="15"></li>
-        <li class="chair" id="16"></li>
-        <li class="chair" id="17"></li>
-        <li class="chair" id="18"></li>
-        <li class="chair" id="19"></li>
-        <li class="chair" id="20"></li>
-        <li class="chair" id="21"></li>
+        <li class="chair" id="A1"></li>
+        <li class="chair" id="A2"></li>
+        <li class="chair" id="A2" ></li>
+        <li class="chair" id="A4" ></li>
+        <li class="chair" id="A5" ></li>
+        <li class="chair" id="A6" ></li>
+        <li class="chair" id="A7" ></li>
+        <li class="chair" id="A8" ></li>
+        <li class="chair" id="A9" ></li>
+        <li class="chair" id="A10"></li>
+        <li class="chair" id="A11"></li>
+        <li class="chair" id="A12"></li>
+        <li class="chair" id="A13"></li>
+        <li class="chair" id="A14"></li>
+        <li class="chair" id="A15"></li>
+        <li class="chair" id="A16"></li>
+        <li class="chair" id="A17"></li>
+        <li class="chair" id="A18"></li>
+        <li class="chair" id="A19"></li>
+        <li class="chair" id="A20"></li>
+        <li class="chair" id="A21"></li>
         <span>A</span>
       </div>
       <div class="row-seat">
         <span>B</span>
-        <li class="chair" id="1"></li>
-        <li class="chair" id="2"></li>
-        <li class="chair" id="2" ></li>
-        <li class="chair" id="4" ></li>
-        <li class="chair" id="5" ></li>
-        <li class="chair" id="6" ></li>
-        <li class="chair" id="7" ></li>
-        <li class="chair" id="8" ></li>
-        <li class="chair" id="9" ></li>
-        <li class="chair" id="10"></li>
-        <li class="chair" id="11"></li>
-        <li class="chair" id="12"></li>
-        <li class="chair" id="13"></li>
-        <li class="chair" id="14"></li>
-        <li class="chair" id="15"></li>
-        <li class="chair" id="16"></li>
-        <li class="chair" id="17"></li>
-        <li class="chair" id="18"></li>
-        <li class="chair" id="19"></li>
-        <li class="chair" id="20"></li>
-        <li class="chair" id="21"></li>
+        <li class="chair" id="B1"></li>
+        <li class="chair" id="B2"></li>
+        <li class="chair" id="B2" ></li>
+        <li class="chair" id="B4" ></li>
+        <li class="chair" id="B5" ></li>
+        <li class="chair" id="B6" ></li>
+        <li class="chair" id="B7" ></li>
+        <li class="chair" id="B8" ></li>
+        <li class="chair" id="B9" ></li>
+        <li class="chair" id="B10"></li>
+        <li class="chair" id="B11"></li>
+        <li class="chair" id="B12"></li>
+        <li class="chair" id="B13"></li>
+        <li class="chair" id="B14"></li>
+        <li class="chair" id="B15"></li>
+        <li class="chair" id="B16"></li>
+        <li class="chair" id="B17"></li>
+        <li class="chair" id="B18"></li>
+        <li class="chair" id="B19"></li>
+        <li class="chair" id="B20"></li>
+        <li class="chair" id="B21"></li>
         <span>B</span>
       </div>
       <div class="row-seat">
         <span>C</span>
-        <li class="chair" id="1"></li>
-        <li class="chair" id="2"></li>
-        <li class="chair" id="2" ></li>
-        <li class="chair" id="4" ></li>
-        <li class="chair" id="5" ></li>
-        <li class="chair" id="6" ></li>
-        <li class="chair" id="7" ></li>
-        <li class="chair" id="8" ></li>
-        <li class="chair" id="9" ></li>
-        <li class="chair" id="10"></li>
-        <li class="chair" id="11"></li>
-        <li class="chair" id="12"></li>
-        <li class="chair" id="13"></li>
-        <li class="chair" id="14"></li>
-        <li class="chair" id="15"></li>
-        <li class="chair" id="16"></li>
-        <li class="chair" id="17"></li>
-        <li class="chair" id="18"></li>
-        <li class="chair" id="19"></li>
-        <li class="chair" id="20"></li>
-        <li class="chair" id="21"></li>
+        <li class="chair" id="C1"></li>
+        <li class="chair" id="C2"></li>
+        <li class="chair" id="C2" ></li>
+        <li class="chair" id="C4" ></li>
+        <li class="chair" id="C5" ></li>
+        <li class="chair" id="C6" ></li>
+        <li class="chair" id="C7" ></li>
+        <li class="chair" id="C8" ></li>
+        <li class="chair" id="C9" ></li>
+        <li class="chair" id="C10"></li>
+        <li class="chair" id="C11"></li>
+        <li class="chair" id="C12"></li>
+        <li class="chair" id="C13"></li>
+        <li class="chair" id="C14"></li>
+        <li class="chair" id="C15"></li>
+        <li class="chair" id="C16"></li>
+        <li class="chair" id="C17"></li>
+        <li class="chair" id="C18"></li>
+        <li class="chair" id="C19"></li>
+        <li class="chair" id="C20"></li>
+        <li class="chair" id="C21"></li>
         <span>C</span>
       </div>
       <div class="row-seat">
         <span>D</span>
-        <li class="chair" id="1"></li>
-        <li class="chair" id="2"></li>
-        <li class="chair" id="2" ></li>
-        <li class="chair" id="4" ></li>
-        <li class="chair" id="5" ></li>
-        <li class="chair" id="6" ></li>
-        <li class="chair" id="7" ></li>
-        <li class="chair" id="8" ></li>
-        <li class="chair" id="9" ></li>
-        <li class="chair" id="10"></li>
-        <li class="chair" id="11"></li>
-        <li class="chair" id="12"></li>
-        <li class="chair" id="13"></li>
-        <li class="chair" id="14"></li>
-        <li class="chair" id="15"></li>
-        <li class="chair" id="16"></li>
-        <li class="chair" id="17"></li>
-        <li class="chair" id="18"></li>
-        <li class="chair" id="19"></li>
-        <li class="chair" id="20"></li>
-        <li class="chair" id="21"></li>
+        <li class="chair" id="D1"></li>
+        <li class="chair" id="D2"></li>
+        <li class="chair" id="D2" ></li>
+        <li class="chair" id="D4" ></li>
+        <li class="chair" id="D5" ></li>
+        <li class="chair" id="D6" ></li>
+        <li class="chair" id="D7" ></li>
+        <li class="chair" id="D8" ></li>
+        <li class="chair" id="D9" ></li>
+        <li class="chair" id="D10"></li>
+        <li class="chair" id="D11"></li>
+        <li class="chair" id="D12"></li>
+        <li class="chair" id="D13"></li>
+        <li class="chair" id="D14"></li>
+        <li class="chair" id="D15"></li>
+        <li class="chair" id="D16"></li>
+        <li class="chair" id="D17"></li>
+        <li class="chair" id="D18"></li>
+        <li class="chair" id="D19"></li>
+        <li class="chair" id="D20"></li>
+        <li class="chair" id="D21"></li>
         <span>D</span>
       </div>
       <div class="row-seat">
         <span>E</span>
-        <li class="chair" id="1"></li>
-        <li class="chair" id="2"></li>
-        <li class="chair" id="2" ></li>
-        <li class="chair" id="4" ></li>
-        <li class="chair" id="5" ></li>
-        <li class="chair" id="6" ></li>
-        <li class="chair" id="7" ></li>
-        <li class="chair" id="8" ></li>
-        <li class="chair" id="9" ></li>
-        <li class="chair" id="10"></li>
-        <li class="chair" id="11"></li>
-        <li class="chair" id="12"></li>
-        <li class="chair" id="13"></li>
-        <li class="chair" id="14"></li>
-        <li class="chair" id="15"></li>
-        <li class="chair" id="16"></li>
-        <li class="chair" id="17"></li>
-        <li class="chair" id="18"></li>
-        <li class="chair" id="19"></li>
-        <li class="chair" id="20"></li>
-        <li class="chair" id="21"></li>
+        <li class="chair" id="E1"></li>
+        <li class="chair" id="E2"></li>
+        <li class="chair" id="E2" ></li>
+        <li class="chair" id="E4" ></li>
+        <li class="chair" id="E5" ></li>
+        <li class="chair" id="E6" ></li>
+        <li class="chair" id="E7" ></li>
+        <li class="chair" id="E8" ></li>
+        <li class="chair" id="E9" ></li>
+        <li class="chair" id="E10"></li>
+        <li class="chair" id="E11"></li>
+        <li class="chair" id="E12"></li>
+        <li class="chair" id="E13"></li>
+        <li class="chair" id="E14"></li>
+        <li class="chair" id="E15"></li>
+        <li class="chair" id="E16"></li>
+        <li class="chair" id="E17"></li>
+        <li class="chair" id="E18"></li>
+        <li class="chair" id="E19"></li>
+        <li class="chair" id="E20"></li>
+        <li class="chair" id="E21"></li>
         <span>E</span>
       </div>
       <div class="row-seat">
         <span>F</span>
-        <li class="chair" id="1"></li>
-        <li class="chair" id="2"></li>
-        <li class="chair" id="2" ></li>
-        <li class="chair" id="4" ></li>
-        <li class="chair" id="5" ></li>
-        <li class="chair" id="6" ></li>
-        <li class="chair" id="7" ></li>
-        <li class="chair" id="8" ></li>
-        <li class="chair" id="9" ></li>
-        <li class="chair" id="10"></li>
-        <li class="chair" id="11"></li>
-        <li class="chair" id="12"></li>
-        <li class="chair" id="13"></li>
-        <li class="chair" id="14"></li>
-        <li class="chair" id="15"></li>
-        <li class="chair" id="16"></li>
-        <li class="chair" id="17"></li>
-        <li class="chair" id="18"></li>
-        <li class="chair" id="19"></li>
-        <li class="chair" id="20"></li>
-        <li class="chair" id="21"></li>
+        <li class="chair" id="F1"></li>
+        <li class="chair" id="F2"></li>
+        <li class="chair" id="F2" ></li>
+        <li class="chair" id="F4" ></li>
+        <li class="chair" id="F5" ></li>
+        <li class="chair" id="F6" ></li>
+        <li class="chair" id="F7" ></li>
+        <li class="chair" id="F8" ></li>
+        <li class="chair" id="F9" ></li>
+        <li class="chair" id="F10"></li>
+        <li class="chair" id="F11"></li>
+        <li class="chair" id="F12"></li>
+        <li class="chair" id="F13"></li>
+        <li class="chair" id="F14"></li>
+        <li class="chair" id="F15"></li>
+        <li class="chair" id="F16"></li>
+        <li class="chair" id="F17"></li>
+        <li class="chair" id="F18"></li>
+        <li class="chair" id="F19"></li>
+        <li class="chair" id="F20"></li>
+        <li class="chair" id="F21"></li>
         <span>F</span>
       </div>
     </div>
@@ -239,12 +239,26 @@
     
 
   </div>
-
+  <div class="moviedetails">
+    <table class="pricechart">
+      <tr>
+        <th>Number Of Seat </th>
+        <th>Seats</th>
+        <th>Total Amount</th>
+      </tr>
+      <tr>
+        <td id="noOfSeat">0</td>
+        <td id="seat">0</td>
+        <td id="price">0</td>
+      </tr>
+    </table>
+ </div>
 
   <div class="row-selection-reviews">
     <div class="calculation">
       <div class="amount"></div>
-      <div class="book-btn"><a style="text-decoration: none;" href="{% url 'checkout' Movie_Names.id %}"><button class="btn btn-warning" id="amount">Book Now</button></a></div>
+      <div class="book-btn"><a style="text-decoration: none;" href="{% url 'checkout' Movie_Names.id %}">
+        <button class="btn btn-warning" id="amount">Book Now</button></a></div>
     </div>
     <div class="casting">
       <div class = "actors"><img src="{{Movie_Names.actor_img1.url}}" alt=""></div>
