--- a/movieproject/static/css/checkout.css
+++ b/movieproject/static/css/checkout.css
@@ -84,3 +84,8 @@
     text-decoration: none;
     color: black;
 }
+.ordertable{
+    border: 1px solid black;
+    justify-content:space-between ;
+    width: 25em;
+}
