Database Model Updates

--- a/movieproject/templates/checkout.html
+++ b/movieproject/templates/checkout.html
@@ -15,7 +15,7 @@
         </div>
         <div class="paymentoptions">
             <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Payment Options
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -54,7 +54,14 @@
                     <th >Seats</th>
                     <th style="padding-left: 14em;">{{data.seat}}</th>
                 </tr>
-                
+                <tr style="height: 4em;">
+                    <th >Day</th>
+                    <th style="padding-left: 14em;">{{data.day}}</th>
+                </tr>
+                <tr style="height: 4em;">
+                    <th >Time</th>
+                    <th style="padding-left: 14em;">{{data.show}}</th>
+                </tr>
             </table>
         </div>
         
